--- a/css/main.css
+++ b/css/main.css
@@ -10,4 +10,14 @@
   border: solid;
   background-color: red; }
 
+#guess {
+  width: 100px;
+  height: 20px;
+  border: solid; }
+
+#usedLetters {
+  width: 100px;
+  height: 100px;
+  border: solid; }
+
 /*# sourceMappingURL=main.css.map */
