--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -8,3 +8,11 @@
 		height: 50px;
 		border: solid;
 		background-color: red;}
+
+#guess {width: 100px;
+		height: 20px;
+		border: solid;}
+
+#usedLetters {width: 100px;
+			height: 100px;
+			border: solid;}
