--- a/css/main.css
+++ b/css/main.css
@@ -1,23 +1,140 @@
-#box1 {
-  width: 300px;
-  height: 100px;
-  border: solid;
-  font-size: 30px; }
+html {
+  background: url(../sky.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; }
 
-#start {
-  width: 100px;
-  height: 50px;
+#bigbox {
+  width: 800px;
+  height: 650px;
+  background-color: SeaGreen;
+  position: relative;
+  left: 500px;
+  top: 50px;
+  border: solid 10px;
+  border-color: blue; }
+
+#box1 {
+  width: 750px;
+  height: 180px;
+  font-size: 80px;
+  background-color: white;
+  text-align: center;
+  position: relative;
+  top: 20px;
+  left: 15px;
+  font-family: "helvetica", sans-serif;
   border: solid;
-  background-color: red; }
+  box-shadow: 10px 5px 5px; }
 
 #guess {
-  width: 100px;
-  height: 20px;
-  border: solid; }
+  width: 180px;
+  height: 180px;
+  border: solid;
+  font-family: 'helvetica', sans-serif;
+  box-shadow: 10px 5px 5px;
+  font-size: 150px;
+  background-color: lightgrey;
+  position: relative;
+  bottom: 220px;
+  left: 60px;
+  text-align: center; }
+
+#submit {
+  position: relative;
+  left: 280px;
+  margin: 10px;
+  bottom: 400px;
+  width: 150px;
+  height: 100px;
+  border: solid;
+  font-size: 20px;
+  background-color: gold;
+  font-family: "impact", sans-serif;
+  border-radius: 25%;
+  box-shadow: 10px 5px 5px; }
 
 #usedLetters {
-  width: 100px;
+  width: 250px;
+  height: 60px;
+  border: solid;
+  position: relative;
+  font-size: 55px;
+  text-align: center;
+  left: 1000px;
+  bottom: 480px;
+  background-color: lightgrey;
+  font-family: "impact", sans-serif; }
+
+#header {
+  width: 800px;
   height: 100px;
-  border: solid; }
+  font-family: 'helvetica', sans-serif;
+  font-size: 50px;
+  margin-top: 15px;
+  position: relative;
+  text-align: center;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black; }
+
+#hintbox {
+  width: 400px;
+  height: 120px;
+  border: solid;
+  position: relative;
+  top: 70px;
+  left: 10px;
+  text-align: center;
+  font-size: 25px;
+  font-family: 'helvetica', sans-serif;
+  background-color: lightgrey; }
+
+#title {
+  font-size: 70px;
+  font-family: "impact", sans-serif;
+  color: gold;
+  text-align: center;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black; }
+
+#wheel {
+  width: 350px;
+  height: 350px;
+  background-image: url(../wheel.png);
+  background-size: 100% 100%;
+  position: relative;
+  bottom: 1100px;
+  left: 70px;
+  overflow: hidden;
+  transition-duration: 0.8s;
+  transition-property: transform; }
+
+#wheel:hover {
+  transform: rotate(360deg); }
+
+#hintTitle {
+  position: relative;
+  top: 60px;
+  left: 150px;
+  font-family: "impact", sans-serif;
+  font-size: 40px; }
+
+#letterTitle {
+  position: relative;
+  bottom: 490px;
+  left: 1000px;
+  font-family: "impact", sans-serif;
+  font-size: 40px; }
+
+#guessTitle {
+  position: relative;
+  bottom: 250px;
+  left: 60px;
+  font-family: 'helvetica', sans-serif;
+  font-size: 35px;
+  width: 400px;
+  height: 50px;
+  background-color: lightgrey;
+  border: solid;
+  text-align: center; }
 
 /*# sourceMappingURL=main.css.map */
