--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -1,18 +1,2 @@
-#box1{width:300px;
-	height: 100px;
-	border: solid;
-	font-size: 30px;
-	}
-
-#start {width:100px;
-		height: 50px;
-		border: solid;
-		background-color: red;}
-
-#guess {width: 100px;
-		height: 20px;
-		border: solid;}
-
-#usedLetters {width: 100px;
-			height: 100px;
-			border: solid;}
+@import 'variables';
+@import 'wrapper';
